# claude-workbench

./: .gitignore  CLAUDE.md  HANDOFF-v0.3.0.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.omc/: prd.json  project-memory.json
.omc/sessions/: e6149672-f647-4a65-8860-a702387e1a8e.json
.omc/state/: agent-replay-e6149672-f647-4a65-8860-a702387e1a8e.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: PRD-v2.0-workspace-redesign.md
docs/dev-log/: 2026-05-13-agent-instruction-copy.md  (+6 more)
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build-cmd.bat  build-d.bat  build-env.ps1  build-final.bat  build-llvm.ps1  build-mixed.ps1  build-msvc.bat  build-msvc.ps1  build-vs-preview.ps1  build-vs.ps1  build.bat  build.ps1  msvc-build-vs.bat  msvc-build.cmd  pure-build.bat  pure-build2.bat  rebuild.ps1  tauri-build.ps1  tauri.conf.json
src-tauri/.omc/: project-memory.json
src-tauri/.omc/state/: agent-replay-e6149672-f647-4a65-8860-a702387e1a8e.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
src-tauri/.omc/state/checkpoints/: checkpoint-2026-05-08T02-59-11-988Z.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  workflow.rs
src-tauri/templates/: default-config.json
src-tauri/templates/workflows/: standard-4stage.md
src/types/: config.ts  (+1 more)
templates/: default-config.json
(+50 files in other folders)
