[package]
name = "cospace"
version = "0.1.0"
description = "A visual workbench integrating AI agents with content preview"
authors = ["ruczisi"]
license = "MIT"
repository = "https://github.com/ruczisi/cospace"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tokio = { version = "1", features = ["full"] }
log = "0.4"
portable-pty = "0.8"
anyhow = "1"
